# rust-mach

./: Cargo.toml  README.md  build.rs
.cargo/: config
src/: ldscript  mach.rs  main.rs  multiboot2.rs  raspi.rs
src/aarch64/: asm.h  boot.S  ldscript  memset.S  mm.h  multiboot2.h  sysregs.h  vm_param.h  vm_types.h
src/hardware/: efi.rs  mod.rs
src/hardware/devicetree/: fdt.rs  mod.rs
src/mach/: README.md  allocator.rs  logger.rs  mod.rs  panic.rs
src/multiboot2/: efi.rs  mod.rs  tag.rs
src/multiboot2/tag/: elf.rs  mod.rs
src/raspi/: README.md  miniuart.rs  peripherals.rs
src/raspi/peripherals/: miniuart.rs
tests/: check-mb2-header.sh
util/: create-image.sh
