[package]
name = "rust-mach"
version = "0.1.0"
authors = ["Chris Plant <chris@monkeyircd.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "1.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
heapless = "0.6.0"
volatile-register = "0.2.0" 
